--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "$schema": "https://json.schemastore.org/package",
   "name": "ev",
   "version": "0.1.0",
-  "private": true,  
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.3.3",
